<resources>
    <string name="app_name">Cosmo Farmer App</string>
    <string name="title_activity_navigation" translatable="false">NavigationActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

<!-- Menu Options -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="my_crop">My Crop</string>
    <string name="my_land">My Land</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

<!-- Login Activity Strings -->
    <string name="welcome_nback">Welcome Back</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="change_language">Change Language</string>

<!-- Signup Activity Strings -->
    <string name="welcome_nto_the_ncosmo_family">Welcome To The Cosmo Family</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login_now">Already a member? Login Now</string>

<!-- Products Card -->
    <string name="product">Product</string>
    <string name="rate">Rate</string>
    <string name="updateat">UpdateAt</string>

<!-- Weather Setup Card-->
    <string name="location_label">Location Label</string>

<!-- Youtube Card Thumbnail -->
    <string name="name">Name</string>

<!-- Crop Card -->
    <string name="cropname">#cropname#</string>
    <string name="date">#date#</string>
    <string name="land_area">Land Area</string>
    <string name="quantity">Quantity</string>
    <string name="quantity2">#quantity#</string>
    <string name="delete">Delete</string>

<!-- Add Crop Fragment -->
    <string name="add_crop">Add Crop</string>
    <string name="crop_name">Crop Name</string>
    <string name="select_land">Select Land:</string>
    <string name="total_land_area">Total Land Area:</string>
    <string name="available_land_area">Available Land Area:</string>
    <string name="crop_land_area">Crop Land Area</string>
    <string name="expected_date_of_harvesting">Expected Date of Harvesting</string>
    <string name="expected_quantity_in_kgs">Expected Quantity (In kgs)</string>

<!-- Add Land Fragment -->
    <string name="add_land">Add Land</string>
    <string name="land_name">Land Name</string>
    <string name="account_number">Account Number</string>
    <string name="survey_number">Survey Number</string>
    <string name="location">Location:</string>
    <string name="get_location">Get Location</string>

<!-- Home Fragment -->
    <string name="organic_farming">Organic Farming</string>
    <string name="cosmo_offer_price">Cosmo Offer Price</string>
    <string name="zero_budget_farming">Zero Budget Farming</string>
    <string name="innovative_machine_and_tools">Innovative Machine and Tools</string>
    <string name="farmer_directory">Farmer Directory</string>

<!-- Product List Fragment -->
    <string name="updated_on">Updated On</string>

<!-- Land Card -->
    <string name="survey_no">#survey no.#</string>
    <string name="landname">#landname#</string>
    <string name="account_no">Account No.</string>
    <string name="account_no2">#account no.#</string>
    <string name="land_area2">#land area#</string>
    <string name="update">Update</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="land_area_array">
        <!--<item>Vigha(વીઘા)</item>-->
        <item>Hectare</item>
    </string-array>
</resources>
