<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_add_crop"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/add_crop" />

        <item
            android:id="@+id/nav_my_crop"
            android:icon="@drawable/ic_format_list_bulleted"
            android:title="@string/my_crop" />

        <item
            android:id="@+id/nav_add_land"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/add_land" />

        <item
            android:id="@+id/nav_my_land"
            android:icon="@drawable/ic_format_list_bulleted"
            android:title="@string/my_land" />


    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_changeLang"
                android:icon="@drawable/ic_language_black_24dp"
                android:title="@string/change_language" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
